--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 											<a href="mailto:mmang2@gmail.com">mmang2@gmail.com</a>
 										</li>
 										<li>
-											<a href="/html5up-hyperspace/assets/Resume.pdf">Resume</a>
+											<a href="/assets/Resume.pdf">Resume</a>
 										</li>
 										<li>
 											<h3>Social</h3>
